Informacion del autor y estudios

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Cargue en Git</title>
 </head>
 <body>
-    <h1>Jose Alberto Martinez Villegas</h1>
+    <h1>Mi Pagina Web</h1>
+    <br>
+    <h2>Autor: Jose Alberto Martinez Villegas</h2>
+    <div>
+        <p>Ingeniero de sistemas con 1 año de experiencia</p>
+    </div>
+    <br>
+    <div>
+        <h2>Estudios</h2>
+        <br>
+        <p>Universitarios CECAR</p>
+        <br>
+        <p>Virtuales en CodigoFacilito</p>
+    </div>
 </body>
 </html>
