Agregados sitios conocidos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Mi Pagina Web</h1>
-    <br>
     <h2>Autor: Jose Alberto Martinez Villegas</h2>
     <div>
         <p>Ingeniero de sistemas con 1 año de experiencia</p>
@@ -15,10 +14,21 @@
     <br>
     <div>
         <h2>Estudios</h2>
-        <br>
         <p>Universitarios CECAR</p>
         <br>
         <p>Virtuales en CodigoFacilito</p>
+    </div>
+    <br>
+    <div>
+        <h2>Sitios conocidos</h2>
+        <ul>
+            <li>Cartagena</li>
+            <li>Turbaco</li>
+            <li>Turbana</li>
+            <li>Sincelejo</li>
+            <li>Tolú</li>
+            <li>Coveñas</li>
+        </ul>
     </div>
 </body>
 </html>
