--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
             <li>Coveñas</li>
         </ul>
     </div>
+    <div>
+        <h2>Familia</h2>
+        <p>Mucha familia</p>
+    </div>
 </body>
 </html>
